# f1-analytics-platform

./: .env.prod  .gitignore  README.md  container.py  docker-compose.yml  micro.py  pyproject.toml  test_run.py
.github/workflows/: f1_pipeline.yml
dags/: f1_pipeline.py
f1_transform/: .user.yml  dbt_project.yml  profiles.yml
f1_transform/logs/: query_log.sql
f1_transform/models/: driver_position_changes.sql  fastest_laps.sql  fastest_pit_stops.sql  sources.yml
src/f1_analytics_platform/config/: database_config.py  http_config.py
src/f1_analytics_platform/decorators/: api_decorator.py
src/f1_analytics_platform/exceptions/: __init__.py  extraction_exceptions.py
src/f1_analytics_platform/extraction/: container.py  http_client.py
src/f1_analytics_platform/extraction/client/: driver_client.py  lap_time_client.py  pit_stop_client.py  race_client.py  standing_client.py
src/f1_analytics_platform/extraction/mappers/: driver_mapper.py  lap_time_mapper.py  pit_stop_mapper.py  race_mapper.py  standing_mapper.py
src/f1_analytics_platform/loading/: container.py  database.py
src/f1_analytics_platform/models/: __init__.py  base.py  driver.py  driver_standing.py  lap_time.py  pit_stop.py  race.py
