[project]
name = "f1-analytics-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "LD",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "duckdb (>=1.5.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "dependency-injector (>=4.49.0,<5.0.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "f1_analytics_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.13,<0.16.0)"
]
